--- a/config/config.ini
+++ b/config/config.ini
@@ -31,7 +31,7 @@ db_name = ledgerdata_refiner
 network_name = test-fabric
 client_name = test-client
 # the following parameters must be consistent with the configuration file (connection-config.yaml)
-org_name = Org1
+org_name = bluL1
 org_admin = Admin
 org_user = User1
-channel_id = mychannel
+channel_id = blulabel
